# MillimeterPlots

./: .gitignore  ELM.py  FHZ.py  FOU.py  FOU1.py  FOU2.py  GAM.py  GP_linear_fit_11_12_2024.py  HAL.py  HR_diagramm.py  MIK.py  OPS.py  POL.py  POL_paul.py  README.md  Volumintegrale.py  WSK.py  Why.py  Why2.py  color_builder.py  documentation.md  fiber.py  find_interval.py  gaia_hr_sample.fits  help.py  light_plotting.py  light_plotting_mayahi.py  mathy.py  obstacle_sweep_cache_330.csv  orbit_animation.py  plotting 2.py  plotting.py  plotting_minus.py  plotting_old.py  plotting_plus.py  round_val.py  setup.cfg  tables.py  test.py  testing_plotting.py  (+1 more)
.devcontainer/: devcontainer.json
.github/: .gitignore
FP/HOL/: Audio.py  HOL.py  HOL_old.py
FP/Laser/: laser.py  main.py  modes.py  plot.py
FP/QMS/: Quadro.py
Functions/: __init__.py  color_builder.py  find_interval.py  help.py  plotting.py  tables.py  wavelength_colors.py
GP1/: HAR.py  HAR_A1_basic.py  HAR_A1_fit.py  HAR_A1_fit2.py  HAR_A2_basic.py  ISE_A1.py  ISE_A2.py  PEN.py  SPL.py  SPW_A_0_plot.py  SPW_A_1_plot.py  SPW_A_2_plot.py  SPW_A_3_plot.py  SPW_Const.py  documentation.md  file.TEX
Misc/: LED.py  green.csv  green_led.ies  red.csv  red_led.ies
Old/: GAM.py  HAR2.py  HAR_A1_basic2.py  ISE_A2.py  PEN 2.py  SPW_A_0.py  SPW_A_1.py  SPW_A_2.py  SPW_A_3.py  cs2.csv
Old_2/: GP_linear_fit (1).py
POL_data/: out_test1.txt  out_test3.txt
Testing/: testing.py  testing_plotting.py
bootstrap/: README.md  install_requirements.ps1  install_requirements.py  requirements.txt  verify_install.py
(+156 files in other folders)
