[metadata]
name = gp_plot_data
version = 0.1.0
description = GP plotting and table utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = .
